[task] fix login user

--- a/CourseDiary.Wcf/CourseDiary.Wcf.Client/App.config
+++ b/CourseDiary.Wcf/CourseDiary.Wcf.Client/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<system.serviceModel>
+		<client>
+			<endpoint
+				address="http://localhost:8090/CourseDiary/Users"
+				binding="wsHttpBinding"
+				contract="CourseDiary.Wcf.ServiceDefinitions.Interfaces.IUserManagmentService">
+			</endpoint>
+		</client>
+	</system.serviceModel>
 </configuration>
