--- a/CourseDiary.Wcf/CourseDiary.Wcf.Infrastructure/CourseDiary.Wcf.Infrastructure.csproj
+++ b/CourseDiary.Wcf/CourseDiary.Wcf.Infrastructure/CourseDiary.Wcf.Infrastructure.csproj
@@ -48,14 +48,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SQL\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\CourseDiary.Wcf.Domain\CourseDiary.Wcf.Domain.csproj">
       <Project>{4e689706-45b7-495e-bf4a-a3ac8bee69df}</Project>
       <Name>CourseDiary.Wcf.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQL\Script.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
