[task] Possibility to add a trainer, student and course to the system

--- a/CourseDiary.Wcf/CourseDiary.Wcf.Client/App.config
+++ b/CourseDiary.Wcf/CourseDiary.Wcf.Client/App.config
@@ -10,6 +10,21 @@
 				binding="wsHttpBinding"
 				contract="CourseDiary.Wcf.ServiceDefinitions.Interfaces.IUserManagmentService">
 			</endpoint>
+			<endpoint
+				address="http://localhost:8090/CourseDiary/Trainer"
+				binding="wsHttpBinding"
+				contract="CourseDiary.Wcf.ServiceDefinitions.Interfaces.ITrainerManagmentService">
+			</endpoint>
+			<endpoint
+				address="http://localhost:8090/CourseDiary/Student"
+				binding="wsHttpBinding"
+				contract="CourseDiary.Wcf.ServiceDefinitions.Interfaces.IStudentManagmentService">
+			</endpoint>
+			<endpoint
+				address="http://localhost:8090/CourseDiary/Course"
+				binding="wsHttpBinding"
+				contract="CourseDiary.Wcf.ServiceDefinitions.Interfaces.ICourseManagmentService">
+			</endpoint>
 		</client>
 	</system.serviceModel>
 </configuration>
